--- a/main.ipynb
+++ b/main.ipynb
@@ -230,6 +230,28 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 90,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "0    763\n",
+              "1      9\n",
+              "Name: Class, dtype: int64"
+            ]
+          },
+          "execution_count": 90,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "df.Class.value_counts()"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 4,
       "metadata": {
         "colab": {
